--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+<h1><center>The Magic Computer</center></h1>    
+
+<div id="input-boxes">
+<input type="text" class="Answer1" placeholder="NOUN" >
+<input type="text" class="Answer2" placeholder="PLURAL NOUN" >
+<input type="text" class="Answer3" placeholder="VERB" >
+<input type="text" class="Answer4" placeholder="VERB" >
+<input type="text" class="Answer5" placeholder="PLURAL (part of body)" >
+<input type="text" class="Answer6" placeholder="ADJECTIVE" >
+<input type="text" class="Answer7" placeholder="PLURAL NOUN" >
+<input type="text" class="Answer8" placeholder="ADJECTIVE" >
+</div>
+
+<div id="paragraph">
+<p><center>Today, every student has a computer small enough to fit into his ________. He can solve any math problem by simply pushing the computer's little ________. Computers can add, multiply, divide, and ________. They can also ________ better than human. Some computer are ________. Others have a/an ________ screen that shows all kinds of ________ and ________ figures.</center></p>
+</div>
 </body>
 </html>
